@@ -1,0 +1,24 @@
+<h1>NCT Wish奇蹟般成長！新專輯《Steady》預購破80萬張，成員們的野心是舉辦世界巡演</h1>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/E2c3AiusN3c" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<p>NCT Wish 推出了首張迷你專輯《Steady》，該專輯由主打歌《Steady》領銜。這首歌是一首結合英國車庫（UK garage）和澤西俱樂部（Jersey club）節拍的house曲，展現出成熟的旋律。</p>
+<p>該曲的歌詞描述了與粉絲相遇的奇蹟般旅程，成員Sion表示，這首歌是關於「永遠記住這段旅程」。歌詞既可愛又時尚，Z世代可以輕易地產生共鳴。</p>
+<p>主打歌《Steady》由資深製作人金妍政（Kenzie）操刀，她曾為K-pop製作過無數大熱歌曲。該曲的音樂錄影帶描繪了一段年輕而激動的初戀，電影般的視覺效果強調了錄影帶的夢幻氛圍。</p>
+<p>該專輯還收錄了其他六首歌曲：</p>
+<ul>
+<li>《Dunk Shot》</li>
+<li>《3 Minutes》</li>
+<li>《On & On》</li>
+<li>《Supercute》</li>
+<li>《Skate》</li>
+<li>韓語版的《Hands Up》</li>
+<p></ul></p>
+<p>成員Ryo表示，「《Steady》的舞蹈有許多醒目的手部動作，並使用了動態的步伐。你可以通過表演感受到我們的活力。」該團隊還為兩首B面曲《Dunk Shot》和《3 Minutes》拍攝了音樂錄影帶。<div></p>
+<p>NCT Wish的新專輯有來自K-pop明星寶兒（BoA）的鼎力相助，她是該專輯的製作人之一。</p>
+<p>根據Ryo的描述，寶兒幫助他們調整了主打歌的舞蹈，以突出他們的優點。原本的主打歌沒有rap部分，但她添加了一個，令歌曲更為完整。</p>
+<p>截至9月24日，該專輯已經錄得80萬張預購，超越了該組合之前的預購紀錄63萬張（韓語和日語版的單曲《Songbird》於7月發行）。這個成績令組合成員們感到鼓舞和期待。</p>
+<p>成員Riku表示，「我們期待著即將於11月在日本啟動的首次亞洲巡演。下一個目標是舉辦世界各地大型體育場和巨蛋的單獨演唱會。」這個目標展現了他們的野心和對未來的期待。</p>
+<p></div></p>
+
+<p>資料來源： Korea Herald</p>
